<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e网健身</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
       <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    
      <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
      <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
 <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
      <string name="exit_group">退出</string>
      <string name="connect_conflict">同一帐号已在其他设备登录</string>
      <string name="em_user_remove">此用户已被移除</string>
         <!-- 上拉加载，下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
      <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
   
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook"> </string>
    <string name="twitter"> </string>
    <string name="google"> </string>
    <string name="yundong">开始运动</string>
    <string name="ditu">实时定位</string>
    <string name="shezhi">设置</string>
    <string name="start_app">开始计算:</string>
    <string name="notification_subtitle">计算你的步数</string>

    <string name="started">开始跑步.</string>
    <string name="stopped">跑步结束.</string>

    <string name="steps">步</string>
    <string name="kilometers">公里</string>
    <string name="miles">英里</string>
    <string name="steps_per_minute">步 / 分钟</string>
    <string name="kilometers_per_hour">公里 / 小时</string>
    <string name="miles_per_hour">英里 / 小时</string>
    <string name="calories_burned">卡路里消耗</string>
    <string name="centimeters">厘米</string>
    <string name="inches">英寸</string>
    <string name="kilograms">公斤</string>
    <string name="pounds">英镑</string>

    <string name="desired_pace">期望步伐:</string>
    <string name="desired_speed">期望速度:</string>

    <string name="resume">开始</string>
    <string name="reset">重置</string>
    <!-- Settings -->
    <string name="settings">设置</string>
    <string name="activity_settings">跑步设置</string>
    <string name="steps_settings_title">基本设置</string>
    <string name="sensitivity_setting">感应设置</string>
    <string name="sensitivity_setting_details">感应设置详细界面</string>
    <string name="sensitivity_setting_title">选择感应级别</string>
    <string name="extra_high">非常非常敏感</string>
    <string name="very_high">非常敏感</string>
    <string name="higher">敏感</string>
    <string name="medium">有点敏感</string>
    <string name="lower">还行</string>
    <string name="very_low">不太敏感</string>
    <string name="extra_low">不敏感</string>
    <string name="operation_level_setting">操作设置</string>
    <string name="operation_level_setting_details">有些型号的手机在屏幕关闭的时候，会休眠我，如果不想休眠，设置一下</string>
    <string name="operation_level_setting_title">选择运行方式</string>
    <string name="run_in_background">正常 (在后台继续运行)</string>
    <string name="keep_screen_on">屏幕开启 (屏幕变暗但不锁屏)</string>
    <string name="wake_up">唤醒 (关闭屏幕后唤醒)</string>
    <string name="units_setting">单位</string>
    <string name="units_setting_details">单位和进制</string>
    <string name="units_setting_title">选择</string>
    <string name="units_metric">公制 (公里)</string>
    <string name="units_imperial">英制 (英里)</string>
    <string name="step_length_setting">步长</string>
    <string name="step_length_setting_details">距离，速度和卡路里设定</string>
    <string name="step_length_setting_title">输入您的步长</string>
    <string name="body_weight_setting">体重</string>
    <string name="body_weight_setting_details">卡路里设定</string>
    <string name="body_weight_setting_title">输入您的体重</string>
    <string name="exercise_type_setting">类型</string>
    <string name="exercise_type_setting_details">选择一种你消耗卡路里的方式吧~</string>
    <string name="exercise_type_setting_title">选择锻炼类型</string>
    <string name="exercise_type_running">跑步</string>
    <string name="exercise_type_walking">散步</string>
    <string name="maintain_setting">平衡设置</string>
    <string name="maintain_setting_details">步伐和速度选择</string>
    <string name="maintain_setting_title">保持:</string>
    <string name="maintain_nothing">都不选</string>
    <string name="maintain_pace">步伐</string>
    <string name="maintain_speed">速度</string>
    <string name="voice_settings_title">语音</string>
    <string name="voice_setting">语言设置</string>
    <string name="voice_setting_details">启用语音设置</string>
    <string name="speaking_interval_setting">间隔时间</string>
    <string name="speaking_interval_setting_details">语音提醒间隔时间</string>
    <string name="interval_15_seconds">15 秒</string>
    <string name="interval_30_seconds">30 秒</string>
    <string name="interval_1_minute">1 分钟</string>
    <string name="interval_2_minutes">2 分钟</string>
    <string name="interval_5_minutes">5 分钟</string>
    <string name="interval_10_minutes">10 分钟</string>
    <string name="tell_what">语音播报内容</string>
    <string name="tell_steps_setting">步伐</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">节奏</string>
    <string name="tell_pace_setting_details">步/分钟</string>
    <string name="tell_distance_setting">距离</string>
    <string name="tell_distance_setting_details">公里 or 英里</string>
    <string name="tell_speed_setting">速度</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">卡路里消耗</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">快点/慢点</string>
    <string name="tell_fasterslower_setting_details">帮助你了解自己的步伐、节奏或者速度</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">退出</string>
</resources>